# pokesummary

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-app.yml
pokestats_cli/: __main__.py  data_parse.py  summary_print.py  timing.py
pokestats_cli/data/: modify.py  pokemon.csv  pokemon_modified.csv
pokesummary/: __main__.py  data_parse.py  displaying.py  model.py  models.py  parsing.py  summary_print.py  view.py
pokesummary/data/: .~lock.pokemon_modified.csv#  .~lock.pokemon_original.csv#  __init__.py  modify.py  modify_pokemon  modify_pokemon.py  modify_type_defenses  modify_type_defenses.py  pokemon.csv  pokemon_modified.csv  pokemon_modified_new.csv  pokemon_original.csv  type_defenses.csv  type_defenses_modified.csv  type_defenses_original.csv
tests/: test_pokestats_cli.py  test_pokesummary.py
tests/integration/: test_argument_input.py
tests/integration/fixtures/: multiple_pokemon_output.ansi  single_pokemon_output.ansi
tests/unit/: test_model.py
