[tool.poetry]
name = "pokesummary"
version = "0.1.0"
description = ""
authors = ["Fisher Sun <fisher521.fs@gmail.com>"]
exclude = [
    "pokesummary/data/modify.py",
    "pokesummary/data/pokemon_original.csv",
    "pokesummary/data/modify_type_defenses.py",
    "pokesummary/data/type_defenses_original.py"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.2.2"
render50 = "^4.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pokesummary = "pokesummary.__main__:main"
