[tool.poetry]
name = "pokesummary"
version = "2.1.0"
description = "An easy-to-use, informative command line interface (CLI) for accessing Pokémon summaries."
authors = ["Fisher Sun <fisher521.fs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tactlessfish/pokesummary"
exclude = [
    "pokesummary/data/modify_pokemon",
    "pokesummary/data/pokemon_original.csv",
    "pokesummary/data/modify_type_defenses",
    "pokesummary/data/type_defenses_original.csv"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = {version = "^1.2.2", python = "^3.7.1"}
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pokesummary = "pokesummary.__main__:main"
